tests/typing/bad/testfile-missing_main-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int f() { return 0; }
